data/derived/comb/progs/unify/prog8563.ml.out
Characters 105-124:
  | Sine sin		    -> "sin(pi*"^ (exprToString(sin)) ^")" 
                                ^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         string
